<resources>
    <string name="app_name">Lux Test</string>
    <string name="stay_on_the_top">Stay on the top <b>of your finance</b></string>
    <string name="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam</string>
    <string name="sign_up">가입하기</string>
    <string name="login">로그인</string>
    <string name="email">Email</string>
    <string name="password">비밀번호</string>
    <string name="forgot_your_password">비밀번호 찾기</string>
    <string name="don_have_account">계정이 없으신가요? 가입하기</string>
    <string name="dummy_email">sabahat@gmail.com</string>
    <string name="hash">*******</string>
    <string name="register">회원가입</string>
    <string name="name">이름</string>
    <string name="my_name">이채민</string>
    <string name="mobile_number">휴대폰 번호</string>
    <string name="default_number">+82 111 1111111</string>
    <string name="default_dob">mm - dd-yyyy</string>
    <string name="dob">생년월일</string>
    <string name="default_email">john.doe@alphametics.com</string>
    <string name="password_again">비밀번호 확인</string>
    <string name="terms_condition">이용약관에 동의합니다</string>
    <string name="already_have_an_account">이미 계정이 있으신가요? 로그인</string>
    <string name="at_least_8_characters">최소 8자 이상</string>
    <string name="at_least_one_upper_case">최소 하나의 대문자</string>
    <string name="at_least_one_number">최소 하나의 숫자</string>
    <string name="one_special_character">최소 하나의 특수문자</string>
</resources>