<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/gradationImageView"
        android:layout_width="@dimen/margin_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginEnd="@dimen/default_margin_double"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138"
        app:srcCompat="@drawable/gradation" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/welcomeImageView"
        android:layout_width="@dimen/margin_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginEnd="@dimen/default_margin_double"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradationImageView"
        app:layout_constraintVertical_bias="0.133"
        app:srcCompat="@drawable/bar_chart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        style="@style/header_text_style"
        android:text="@string/stay_on_the_top"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeImageView"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chooseAccountTextView"
        style="@style/normal_text_style"
        android:text="@string/lorem"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUp"
        style="@style/normal_button_style"
        android:layout_width="@dimen/margin_zero"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseAccountTextView"
        app:layout_constraintVertical_bias="0.383" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login"
        style="@style/normal_text_style"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/welcome_login_text"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp"
        app:layout_constraintVertical_bias="0.198" />

</androidx.constraintlayout.widget.ConstraintLayout>